# statement-ingestor

./: .gitignore  GEMINI.md  LICENSE.txt  README.md  pyproject.toml
.github/workflows/: ci.yml
anonymous_samples/: nubank_bank_statement.csv  nubank_card_statement.csv
src/statement_ingestor/: __about__.py  __init__.py  bradesco.py  models.py
statement_ingestor/: __init__.py  base_parser.py  bradesco.py  bradesco_credit_card_parser.py  models.py  nubank.py  nubank_bank_parser.py  nubank_credit_card_parser.py
tests/: test_bradesco.py  test_bradesco_credit_card.py  test_nubank_statement_parser.py
